add optional beerStyle param
